[package]
name = "rust_test"
version = "0.1.0"
authors = ["SmonkeyMonkey <maaaaax9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.9"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
image = "0.23.12"
chrono = "0.4.19"
multer = "1.2.2"
hyper-tls = "0.4.3"